<resources>
    <string name="app_name">Book Store</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="greetings">Welcome!</string>
    <string name="intro">It\'s book store, please log in to start. If you don\'t have an account please sign up </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sett">Settings</string>
    <string name="userInSett">User:</string>
    <string name="book">Book</string>
    <string name="category">Category</string>
    <string name="cats">categories</string>
    <string name="books">books</string>
    <string name="users">users</string>
    <string name="addNewCat">Add new Category</string>
    <string name="newCat">New Category</string>
    <string name="add">Add</string>
    <string name="addNewBook">Add new Book</string>
    <string name="bookName">Book name</string>
    <string name="descr">Description</string>
    <string name="author">Author</string>
    <string name="price">Cost</string>
    <string name="catTitle">Category Title</string>
    <string name="bookNameTwoDots">Book name:</string>
    <string name="authorTwoDots">Author:</string>
    <string name="catTwoDots">Category:</string>
    <string name="costTwoDots">Cost:</string>
    <string name="descrTwoDots">Description:</string>
    <string name="udpCat">Update Category</string>
    <string name="catName">Category name</string>
    <string name="upd">Update</string>
    <string name="updBook">Update Book</string>
    <string name="manage">Manage</string>
    <string name="catalog">Catalog</string>
    <string name="cart">Cart</string>
</resources>