<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.EditBookActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_return"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="fill_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/baseline_return"
            android:background="@drawable/btn_style"/>

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updBook"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="25dp"
            android:textColor="@color/dark_p"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_form">
            <LinearLayout
                android:id="@+id/names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/bookNameTwoDots"
                    android:textStyle="bold"
                    android:textColor="@color/dark_p"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/authorTwoDots"
                    android:textStyle="bold"
                    android:textColor="@color/dark_p"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/catTwoDots"
                    android:textStyle="bold"
                    android:textColor="@color/dark_p"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/costTwoDots"
                    android:textStyle="bold"
                    android:textColor="@color/dark_p"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/descrTwoDots"
                    android:textStyle="bold"
                    android:textColor="@color/dark_p"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@id/names">

                <TextView
                    android:id="@+id/book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/bookNameTwoDots"
                    android:textColor="@color/dark_p"/>

                <TextView
                    android:id="@+id/bookAuth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/authorTwoDots"
                    android:textColor="@color/dark_p"/>

                <TextView
                    android:id="@+id/bookCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/catTwoDots"
                    android:textColor="@color/dark_p"/>

                <TextView
                    android:id="@+id/bookCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/costTwoDots"
                    android:textColor="@color/dark_p"/>
                <TextView
                    android:id="@+id/bookDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/descrTwoDots"
                    android:textStyle="bold"
                    android:textColor="@color/dark_p"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bookName"
        android:padding="8dp"
        android:textSize="25dp"
        android:background="@drawable/rounded_form"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descr"
        android:padding="8dp"
        android:textSize="25dp"
        android:background="@drawable/rounded_form"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginRight="10dp"
            android:textSize="25dp"
            android:background="@drawable/rounded_form"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:padding="8dp"
            android:textSize="25dp"
            android:background="@drawable/rounded_form"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:padding="8dp"
            android:layout_weight="1"
            android:textSize="25dp"
            android:background="@drawable/rounded_form"
            android:drawableRight="@drawable/baseline_keyboard_arrow_down_24"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/upd"
            android:background="@drawable/btn_style"
            />
    </LinearLayout>

</LinearLayout>