<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".fragments.user.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/purple_200">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/sett"
        android:textStyle="bold"
        android:textColor="@color/dark_p"
        android:textSize="25dp"
        android:layout_weight="1"
        android:padding="10dp"
        />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_exit_to_app_24"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/top_bar">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userInSett"

        android:textSize="25dp"
        android:textColor="@color/dark_p"
        android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"

            android:textSize="25dp"
            android:textColor="@color/dark_p"
            android:layout_margin="10dp"/>
    </LinearLayout>


</RelativeLayout>