<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.EditCategoryActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_return"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/baseline_return"
            android:background="@drawable/btn_style"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/udpCat"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="@color/dark_p"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/currName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="8dp"
        android:textStyle="bold"
        android:layout_weight="1"
        android:textSize="25sp"
        android:textColor="@color/dark_p"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/catName"
        android:padding="8dp"
        android:textSize="25sp"
        android:background="@drawable/rounded_form"
        android:layout_marginBottom="10dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/upd"
            android:background="@drawable/btn_style"
            />

</LinearLayout>