<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_form">
        <LinearLayout
            android:id="@+id/names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/bookNameTwoDots"
                android:textStyle="bold"
                android:textColor="@color/dark_p"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/authorTwoDots"
                android:textStyle="bold"
                android:textColor="@color/dark_p"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/catTwoDots"
                android:textStyle="bold"
                android:textColor="@color/dark_p"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/costTwoDots"
                android:textStyle="bold"
                android:textColor="@color/dark_p"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/descrTwoDots"
                android:textStyle="bold"
                android:textColor="@color/dark_p"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/names">

            <TextView
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/bookNameTwoDots"
                android:textColor="@color/dark_p"/>

            <TextView
                android:id="@+id/bookAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/authorTwoDots"
                android:textColor="@color/dark_p"/>

            <TextView
                android:id="@+id/bookCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/catTwoDots"
                android:textColor="@color/dark_p"/>

            <TextView
                android:id="@+id/bookCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/costTwoDots"
                android:textColor="@color/dark_p"/>
            <TextView
                android:id="@+id/bookDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/descrTwoDots"
                android:textStyle="bold"
                android:textColor="@color/dark_p"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/cart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_toEndOf="@id/info"
            android:src="@drawable/baseline_shopping_cart_purp"
            android:background="@null"/>

    </LinearLayout>




</androidx.cardview.widget.CardView>