<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:textColor="@color/dark_p"
        android:textStyle="italic|bold"
        android:textSize="40dp"
        android:text="@string/bookName"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descrTwoDots"
            android:textSize="25dp"
            android:layout_marginRight="40dp"></TextView>

        <TextView
            android:id="@+id/bookDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorTwoDots"
            android:textSize="25dp"></TextView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorTwoDots"
                android:textSize="25dp"
                android:layout_marginRight="40dp"></TextView>

            <TextView
                android:id="@+id/bookAuth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorTwoDots"
                android:textSize="25dp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/costTwoDots"
                android:textSize="25dp"
                android:layout_marginRight="40dp"></TextView>

            <TextView
                android:id="@+id/bookCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorTwoDots"
                android:textSize="25dp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catTwoDots"
                android:textSize="25dp"
                android:layout_marginRight="40dp"></TextView>

            <TextView
                android:id="@+id/bookCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorTwoDots"
                android:textSize="25dp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_favorite"
                android:layout_gravity="right"
                android:background="@drawable/btn_style_white"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_star_rate"
                android:layout_gravity="right"
                android:background="@drawable/btn_style_white"/>



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>